yosemite/theme/css/theme.css
@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300,700);

body, html {
    font-family: 'Open Sans', 'sans-serif';
    background-color: transparent;
    height: 100%;
    width: 100%;
    overflow: hidden;
}

/* Navigation (Headerbar) */

.navbar-default {
    background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(234,234,234,0.8)), color-stop(100%, rgba(213,213,213,0.8)));
    background: -webkit-linear-gradient(top, rgba(234,234,234,0.8) 0%, rgba(213,213,213,0.8) 100%);
    border: 1px solid #a6a6a8;
    border-right: 1px solid #a6a6a8;
    border-left: 1px solid #a6a6a8;
    border-radius: 7px 7px 0px 0px;
}

.navbar {
    height: 40px !important;
    min-height: 40px !important;
    max-height: 40px !important;
}

.navbar-default .navbar-nav > li > a {
  color: #6f6f6f;
  display: inline-block;
  vertical-align: middle;
}

.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
  color: #424242;
}

.navbar-default .navbar-nav > .open > a {
  color: #6f6f6f;
  background: transparent;
}

.navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
  color: #6f6f6f;
  background: transparent;
}

/* Titlebar Title (Application Name) Could make this read Package.json for name */

.program-title {
    line-height: 18px !important;
    padding-top: 10px;
    position: absolute;
    float: center !important;
    left: 45%;
}

.program-name {
    font-family: 'Open Sans', sans-serif;
}

/* Dropdown Menus */

.dropdown-menu li > a:hover, .dropdown-menu li > a:focus {
  color: #6f6f6f;
  background: -webkit-linear-gradient(top, rgba(234,234,234,0.85) 0%, rgba(213,213,213,0.85) 100%);
}

.dropdown-submenu:hover > a {
  color: #6f6f6f;
  background: -webkit-linear-gradient(top, rgba(234,234,234,0.85) 0%, rgba(213,213,213,0.85) 100%);
}

/* Close/Minimize/Fullscreen */

.close-button {
    margin-top: 12px;
    margin-left: 10px;
    height: 12px;
    width: 12px;
    background: url(../img/yosemite-trafficlight.png) 0 0;
}

.close-button:hover {
    margin-top: 12px;
    margin-left: 10px;
    height: 12px;
    width: 12px;
    background: url(../img/yosemite-trafficlight.png) 0 -14px;
}

.close-button:focus {
    margin-top: 12px;
    margin-left: 10px;
    height: 12px;
    width: 12px;
    background: url(../img/yosemite-trafficlight.png) 0 -28px;
}

.minimize-button {
    margin-top: 12px;
    margin-left: 10px;
    height: 12px;
    width: 12px;
    background: url(../img/yosemite-trafficlight.png) -14px 0;
}

.minimize-button:hover {
    margin-top: 12px;
    margin-left: 10px;
    height: 12px;
    width: 12px;
    background: url(../img/yosemite-trafficlight.png) -14px -14px;
}

.minimize-button:focus {
    margin-top: 12px;
    margin-left: 10px;
    height: 12px;
    width: 12px;
    background: url(../img/yosemite-trafficlight.png) -14px -28px;
}


.fullscreen-button {
    margin-right: 15px;
}

.fullscreen-expand {
    margin-top: 12px;
    margin-left: 10px;
    height: 12px;
    width: 12px;
    background: url(../img/yosemite-trafficlight.png) -28px 0;
}

.fullscreen-expand:hover {
    margin-top: 12px;
    margin-left: 10px;
    height: 12px;
    width: 12px;
    background: url(../img/yosemite-trafficlight.png) -28px -14px;
}

.fullscreen-expand:focus {
    margin-top: 12px;
    margin-left: 10px;
    height: 12px;
    width: 12px;
    background: url(../img/yosemite-trafficlight.png) -28px -28px;
}

.fullscreen-compress {
    margin-top: 12px;
    margin-left: 10px;
    height: 12px;
    width: 12px;
    background: url(../img/yosemite-trafficlight.png) -42px 0;
}

.fullscreen-compress:hover {
    margin-top: 12px;
    margin-left: 10px;
    height: 12px;
    width: 12px;
    background: url(../img/yosemite-trafficlight.png) -42px -14px;
}

.fullscreen-compress:focus {
    margin-top: 12px;
    margin-left: 10px;
    height: 12px;
    width: 12px;
    background: url(../img/yosemite-trafficlight.png) -42px -42px;
}

.back-button {
    margin-top: -1px;
    margin-left: 5px;
    margin-right: 8px;
    height: 14px;
    width: 8px;
    background: url(images/back-sml.png);
}

.forward-button {
    margin-top: -1px;
    margin-left: 5px;
    margin-right: 8px;
    height: 14px;
    width: 8px;
    background: url(images/forward-disabled-sml.png);
}

.btn-default {
    margin-top: 6px;
    height: 24px;
    background-color:#ffffff;
    box-shadow: 0px 2px 1px 0.00px rgba(16, 16, 16, 0.35);
    border-radius: 4px;
}

.btn-disabled {
    margin-top: 6px;
    height: 24px;
    background-color: #ffffff;
    box-shadow: 0px 2px 1px 0.00px rgba(16, 16, 16, 0.35);
    border-radius: 4px;
}

.btn {
    border: #ffffff;
}

.btn-default:hover {
    background-color: #e4e4e4;
    box-shadow: 0px 2px 1px 0.00px rgba(16, 16, 16, 0.25);
}

.btn-group {
    margin-top: -10px;
    margin-right: 0px;
}

.cog-button {
    margin-top: 0px;
    margin-left: 30px;
    margin-right: 20px;
    margin-bottom: 5px;
    padding-bottom: 10px;
    height: 12px;
    width: 12px;
    background: url(images/cog-12.png);
}

.arrow-down {
    margin-top: -8px;
    margin-left: 50px;
    padding-bottom: 6px;
    height: 6px;
    width: 9px;
    background: url(images/arrow-down-sml.png);
}

/* Drop Downs */

ul.dropdown-menu {
    background-color: rgba(253, 253, 254, 0.8);
    box-shadow: 0px 8px 16px 0.00px rgba(131, 150, 166, 0.75);
    border: rgba(253, 253, 254, 0.8);
    border-radius: 9px !important;
}

.dropdown-menu>li>a {
    color: #000000;
}

.dropdown-menu>li>a:hover, .dropdown-menu>li>a:focus {
    background-color: rgba(21, 126, 251, 1)
}

/* Content */

.container-fluid {
    margin: 0;
    padding: 0;
    margin-top: 40px;
    margin-bottom: -40px !important;
    height: 95.5%;
    width: 100%;
    position: absolute;
    background-color: #FFFFFF;
    border-right: 1px solid #a6a6a8;
    border-left: 1px solid #a6a6a8;
    border-bottom: 1px solid #a6a6a8;
    border-radius: 0px 0px 4px 4px;
    overflow: auto;
}

.content {
    text-align: center;
    height: 100%;
    width: 100%;
}

html {
    margin-bottom: -40px;
}

.push-settings {
    margin-right: 10px;
}

